[package]
name = "polymesh-extension"
version = "0.1.0"
edition = "2021"

[dependencies]
ink_primitives = { version = "=3.0", default-features = false }
ink_metadata = { version = "=3.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "=3.0", default-features = false }
ink_storage = { version = "=3.0", default-features = false }
ink_lang = { version = "=3.0", default-features = false }
ink_lang_codegen = { version = "=3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

[features]
default = ["std", "type_info"]
type_info = [
    "scale-info/std",
]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
]
ink-as-dependency = []
